version/0.20/_sources/api/solver/_autosummary/settings/velocity_inlet.rst.txt
:orphan:

.. _velocity_inlet:

velocity_inlet
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.velocity_inlet.velocity_inlet
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`velocity_inlet_child <velocity_inlet_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

